--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-password-strength-bar-with-style-item": "^0.5.3",
     "react-redux": "^9.1.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3",
     "yup": "^1.4.0",
