--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://oxs90.github.io/MoneyGuard/",
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -15,6 +16,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-password-strength-bar-with-style-item": "^0.5.3",
@@ -25,6 +27,7 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.3",
     "yup": "^1.4.0",
     "zxcvbn": "^4.4.2"
