--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "formik": "^2.4.5",
+    "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.6.0",
@@ -25,6 +26,8 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.8",
+    "use-history": "^1.4.1",
     "web-vitals": "^2.1.3",
     "yup": "^1.4.0",
     "zxcvbn": "^4.4.2"
