--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-password-strength-bar-with-style-item": "^0.5.3",
     "react-redux": "^9.1.0",
     "react-responsive": "^10.0.0",
