--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Money Guard",
+  "name": "Money Guard",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "./logo.svg",
+      "type": "image/svg",
+      "sizes": "25x24"
     },
     {
-      "src": "logo192.png",
+      "src": "./logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "199x192"
     },
     {
-      "src": "logo512.png",
+      "src": "./logo532.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "532x512"
     }
   ],
   "start_url": ".",
